--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,10 +1,7 @@
 .form-search {
   background-color: #000;
-  margin-bottom: 50px;
-  margin-top: 20px;
-  margin-left: 70px;
-  margin-right: 70px;
   color: #fff;
+  margin: 40px 50px;
   padding: 10px 20px;
 }
 
@@ -17,7 +14,7 @@
 }
 
 .label-search {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 300;
 }
 
@@ -56,7 +53,6 @@
 .btn-load {
   background: #66ccff;
   border: none;
-  margin: 20px;
   font-size: 14px;
 }
 
@@ -153,4 +149,30 @@
 
 .background-flying {
   background: linear-gradient(180deg, #45a1df 50%, #a1a3a5 50%);
+}
+
+/*responsive design*/
+@media (max-width: 575.98px) {
+  .form-group-item {
+    margin-left: 20vw;
+    margin-right: 20vw;
+  }
+
+  .img-thumbnail {
+    width: 60vw;
+  }
+
+  .item-number {
+    font-size: 12px;
+  }
+
+  .item-name {
+    font-size: 18px;
+  }
+
+  .btn-type {
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 12px;
+  }
 }
